Fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     width: 12px;
 }
 
-::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     background: #2c2c2c;
 }
 
